20181214 Стили списков через :not(...)

--- a/src/_tpl_nav-constructor.html
+++ b/src/_tpl_nav-constructor.html
@@ -1,5 +1,5 @@
 <!--(1) START @@bsKey FIRST level-->
-<ul class="@@bsKey__list @@bsKey-js">
+<ul class="@@bsKey__list reset-list @@bsKey-js">
 	<!--@@bsKey item start-->
 	<li class="has-drop@@if(currentItem === 'All pages'){current}">
 		@@include('_tpl_nav-LINK--full.html', { "txt": "All pages", "href": "all-pages.html", "key": "@@bsKey" })
