--- a/src/inner.html
+++ b/src/inner.html
@@ -39,7 +39,9 @@
 </head>
 
 <body>
-	<noscript><div class="no-js-warning">Для корректной работы сайта <b>включите JavaScript</b> в браузере</div></noscript>
+	<noscript>
+		<div class="no-js-warning">Для корректной работы сайта <b>включите JavaScript</b> в браузере</div>
+	</noscript>
 	<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
 	<!-- >>> head.tpl END <<< -->
 	<div class="wrapper">
@@ -49,15 +51,15 @@
 				<div class="header__holder">
 					<!--logo-->
 					<strong class="logo">
-				<a href="index.html" title="Project Name">Project Name</a>
-				<img style="display: none;" src="img/logo.png" alt="Project Name">
-			</strong>
+						<a href="index.html" title="Project Name">Project Name</a>
+						<img style="display: none;" src="img/logo.png" alt="Project Name">
+					</strong>
 					<!--logo end-->
 					<!--navigation-->
 					<div class="nav-wrap">
 						<nav class="nav">
 							<!--(1) START nav FIRST level-->
-							<ul class="nav__list nav-js">
+							<ul class="nav__list reset-list nav-js">
 								<!--nav item start-->
 								<li class="has-drop">
 									<div class="nav__tab nav__tab-js">
@@ -262,7 +264,8 @@
 									</ul>
 								</div>
 								<h1>
-									<span class="mark"></span> Типографика в вебдизайне. Основные понятия и положения
+									<span class="mark"></span>
+									Типографика в вебдизайне. Основные понятия и положения
 								</h1>
 								<div class="layout-full-width" style="background-color: coral;">
 									<h4>layout-full-width (нет отступов по горизонтали)</h4>
@@ -299,8 +302,7 @@
 									<li>Без отступа</li>
 									<li>Узкая колонка. Висячая пунктуация. Не злоупотребляйте пробелами</li>
 								</ol>
-								<p>Высота строчных букв без выносных элементов — это расстояние от базовой до верхней линии шрифта, иначе говоря — величина очка строчных. Выбирая шрифты, которые вы хотите использовать при оформлении совместно, нужно следить, чтобы высота их строчных
-									букв была одинакова. Это поможет выдержать одинаковый уровень насыщенности абзаца. Кроме того, такой текст будет легче читаться.</p>
+								<p>Высота строчных букв без выносных элементов — это расстояние от базовой до верхней линии шрифта, иначе говоря — величина очка строчных. Выбирая шрифты, которые вы хотите использовать при оформлении совместно, нужно следить, чтобы высота их строчных букв была одинакова. Это поможет выдержать одинаковый уровень насыщенности абзаца. Кроме того, такой текст будет легче читаться.</p>
 							</div>
 						</div>
 					</div>
