--- a/src/test-mixins.html
+++ b/src/test-mixins.html
@@ -39,7 +39,9 @@
 </head>
 
 <body class="mx-test">
-	<noscript><div class="no-js-warning">Для корректной работы сайта <b>включите JavaScript</b> в браузере</div></noscript>
+	<noscript>
+		<div class="no-js-warning">Для корректной работы сайта <b>включите JavaScript</b> в браузере</div>
+	</noscript>
 	<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
 	<!-- >>> head.tpl END <<< -->
 	<link rel="stylesheet" href="css/test-mixins.css">
@@ -50,15 +52,15 @@
 				<div class="header__holder">
 					<!--logo-->
 					<strong class="logo">
-				<a href="index.html" title="Project Name">Project Name</a>
-				<img style="display: none;" src="img/logo.png" alt="Project Name">
-			</strong>
+						<a href="index.html" title="Project Name">Project Name</a>
+						<img style="display: none;" src="img/logo.png" alt="Project Name">
+					</strong>
 					<!--logo end-->
 					<!--navigation-->
 					<div class="nav-wrap">
 						<nav class="nav">
 							<!--(1) START nav FIRST level-->
-							<ul class="nav__list nav-js">
+							<ul class="nav__list reset-list nav-js">
 								<!--nav item start-->
 								<li class="has-drop">
 									<div class="nav__tab nav__tab-js">
