20181221 в gulp добавлено автоматическое создание списка всех страниц

--- a/src/404.html
+++ b/src/404.html
@@ -7,9 +7,9 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Типографика</title>
+	<title>Error 404</title>
 	<!--Mobile optimized-->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.2">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
 	<!--Theme color-->
 	<meta name="theme-color" content="#fff">
 	<!--SEO-->
