--- a/src/_tpl_layout_header.html
+++ b/src/_tpl_layout_header.html
@@ -1,23 +1,20 @@
 <header class="header">
-	<div class="max-wrap layout">
-		<div class="header__holder">
-			<!--logo-->
-			<strong class="logo">
-				<@@if(currentItem == "Главная"){span}@@if(currentItem != "Главная"){a href="index.html" title="Project Name"}>Project Name</@@if(currentItem == "Главная"){span}@@if(currentItem != "Главная"){a}>
-				<img style="display: none;" src="img/logo.png" alt="Project Name">
-			</strong>
-			<!--logo end-->
+  <div class="max-wrap layout">
+    <div class="header__holder">
+      <!--logo-->
+      <strong class="logo">
+        <@@if(currentItem == "Главная"){span}@@if(currentItem != "Главная"){a href="index.html" title="Project Name"}>Project Name</@@if(currentItem == "Главная"){span}@@if(currentItem != "Главная"){a}>
+      <img style="display: none;" src="img/logo.png" alt="Project Name">
+      </strong>
+      <!--logo end-->
 
-			<!--navigation-->
-			<div class="nav-wrap">
-				<nav class="nav">
-					@@include('_tpl_nav-constructor.html', {
-						"currentItem": "@@currentItem",
-						"bsKey": "nav"
-					})
-				</nav>
-			</div>
-		<!--navigation end-->
-		</div>
-	</div>
+      <!--navigation-->
+      <div class="nav-wrap">
+        <nav class="nav">
+          @@include('_tpl_nav-constructor.html', { "currentItem": "@@currentItem", "bsKey": "nav" })
+        </nav>
+      </div>
+      <!--navigation end-->
+    </div>
+  </div>
 </header>
