--- a/src/_tpl_layout_header.html
+++ b/src/_tpl_layout_header.html
@@ -2,11 +2,12 @@
   <div class="max-wrap layout">
     <div class="header__holder">
       <!--logo-->
-      <strong class="logo">
-        <@@if(currentItem == "Главная"){span}@@if(currentItem != "Главная"){a href="index.html" title="Project Name"}>Project Name</@@if(currentItem == "Главная"){span}@@if(currentItem != "Главная"){a}>
-      <img style="display: none;" src="img/logo.png" alt="Project Name">
-      </strong>
-      <!--logo end-->
+      <div class="logo">
+        @@if(context.currentItem === "Главная"){<span>Project Name</span>}
+        @@if(context.currentItem !== "Главная"){<a href="index.html" title="Перейти на главную">Project Name</a>}
+        <img style="display: none;" src="img/logo.png" alt="Print version logotype">
+      </div>
+      <!--/logo-->
 
       <!--navigation-->
       <div class="nav-wrap">
@@ -14,7 +15,7 @@
           @@include('_tpl_nav-constructor.html', { "currentItem": "@@currentItem", "bsKey": "nav" })
         </nav>
       </div>
-      <!--navigation end-->
+      <!--/navigation-->
     </div>
   </div>
 </header>
