--- a/src/inner.html
+++ b/src/inner.html
@@ -51,11 +51,11 @@
       <div class="max-wrap layout">
         <div class="header__holder">
           <!--logo-->
-          <strong class="logo">
-            <a href="index.html" title="Project Name">Project Name</a>
-            <img style="display: none;" src="img/logo.png" alt="Project Name">
-          </strong>
-          <!--logo end-->
+          <div class="logo">
+            <a href="index.html" title="Перейти на главную">Project Name</a>
+            <img style="display: none;" src="img/logo.png" alt="Print version logotype">
+          </div>
+          <!--/logo-->
           <!--navigation-->
           <div class="nav-wrap">
             <nav class="nav">
@@ -244,7 +244,7 @@
               <!--(1) END nav FIRST level-->
             </nav>
           </div>
-          <!--navigation end-->
+          <!--/navigation-->
         </div>
       </div>
     </header>
