--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
   <link rel="shortcut icon" href="favicon.ico?rev=@@hash">
   <link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico?rev=@@hash">
   <link rel="apple-touch-icon" href="apple-touch-icon.png?rev=@@hash">
+  <!--manifest-->
+  <link rel="manifest" href="manifest.webmanifest">
   <!--Style-->
   <link rel="stylesheet" href="css/libs.min.css?rev=@@hash">
   <link rel="stylesheet" href="css/main.css?rev=@@hash">
