--- a/src/_tpl_breadcrumbs.html
+++ b/src/_tpl_breadcrumbs.html
@@ -1,8 +1,8 @@
-<div class="breadcrumbs">
+<nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul class="breadcrumbs__list">
     @@for (var i = 0; i < items.length; i++) {
-    <li><a href="#"><span title="`+items[i]+`">`+items[i]+`</span></a></li>
+    <li class="breadcrumbs__item"><a href="#" title="`+items[i]+`">`+items[i]+`</a></li>
     }
-    <li><span title="@@if(context.last){@@last}@@if(!context.last){Название раздела}">@@if(context.last){@@last}@@if(!context.last){Название раздела}</span></li>
+    <li class="breadcrumbs__item current" aria-current="page">@@if(context.last){@@last}@@if(!context.last){Название раздела}</li>
   </ul>
-</div>
+</nav>
