--- a/src/_tpl_forms_checks.html
+++ b/src/_tpl_forms_checks.html
@@ -1,5 +1,5 @@
 <form action="#" method="post">
-  <div class="form-row">
+  <div class="form-group">
     <div class="input-wrap">
       <h4>
         <a href="#hashFormCheckboxOutsideExample" id="hashFormCheckboxOutsideExample" class="hashAnchor"><span class="mark">Checkbox outside label</span></a>
