--- a/src/_tpl_forms_select2.html
+++ b/src/_tpl_forms_select2.html
@@ -15,31 +15,31 @@
       <select class="cselect" data-placeholder="- Выбрать -" name="select-name" id="form-clear-c-select-base">
         @@include('_tpl_forms_options.html')
       </select>
-      @@include('_tpl_forms_valid.html')
+      @@include('_tpl_forms_valid-old.html')
       <!--===================================================-->
       <label for="form-clear-c-select">Селект - значение не выбрано:</label>
       <select class="cselect field-js" data-placeholder="- Выбрать -" name="select-name" id="form-clear-c-select">
         @@include('_tpl_forms_options.html')
       </select>
-      @@include('_tpl_forms_valid.html')
+      @@include('_tpl_forms_valid-old.html')
       <!--===================================================-->
       <label for="form-clear-c-select-fit">Селект - значение выбрано по умолчанию:</label>
       <select class="cselect field-js" name="select-name" id="form-clear-c-select-fit">
         @@include('_tpl_forms_options.html', {"placeholder":"false"})
       </select>
-      @@include('_tpl_forms_valid.html')
+      @@include('_tpl_forms_valid-old.html')
       <!--===================================================-->
       <label class="error" for="form-clear-c-select-err">Селект - невалидный :</label>
       <select class="cselect field-js error" data-placeholder="- Выбрать -" name="select-name" id="form-clear-c-select-err">
         @@include('_tpl_forms_options.html')
       </select>
-      @@include('_tpl_forms_valid.html')
+      @@include('_tpl_forms_valid-old.html')
       <!--===================================================-->
       <label class="success" for="form-clear-c-select-suc">Селект - валидный:</label>
       <select class="cselect field-js success" data-placeholder="- Выбрать -" name="select-name" id="form-clear-c-select-suc">
         @@include('_tpl_forms_options.html')
       </select>
-      @@include('_tpl_forms_valid.html')
+      @@include('_tpl_forms_valid-old.html')
     </div>
   </div>
 
@@ -59,13 +59,13 @@
 			<select class="cselect" data-placeholder="- Выберите несколько вариантов -" name="select-name" multiple id="form-clear-c-mSelect-base">
 				@@include('_tpl_forms_options.html')
 			</select>
-			@@include('_tpl_forms_valid.html')
+			@@include('_tpl_forms_valid-old.html')
 			<!--===================================================-->
 			<label for="form-clear-c-mSelect">Селект - значение не выбрано:</label>
 			<select class="cselect field-js" data-placeholder="- Выбрать -" name="select-name" multiple id="form-clear-c-mSelect">
 				@@include('_tpl_forms_options.html')
 			</select>
-			@@include('_tpl_forms_valid.html')
+			@@include('_tpl_forms_valid-old.html')
 			<!--===================================================-->
 			<label for="form-clear-c-mSelect-fit">Селект - значение выбрано по умолчанию:</label>
 			<select class="cselect field-js" name="select-name" multiple id="form-clear-c-mSelect-fit">
@@ -78,19 +78,19 @@
 				<option value="7">Сочетание</option>
 				<option value="8">Расстояние</option>
 			</select>
-			@@include('_tpl_forms_valid.html')
+			@@include('_tpl_forms_valid-old.html')
 			<!--===================================================-->
 			<label class="error" for="form-clear-c-mSelect-err">Селект - невалидный :</label>
 			<select class="cselect field-js error" data-placeholder="- Выбрать -" name="select-name" multiple id="form-clear-c-mSelect-err">
 				@@include('_tpl_forms_options.html')
 			</select>
-			@@include('_tpl_forms_valid.html')
+			@@include('_tpl_forms_valid-old.html')
 			<!--===================================================-->
 			<label class="success" for="form-clear-c-mSelect-suc">Селект - валидный:</label>
 			<select class="cselect field-js success" data-placeholder="- Выбрать -" name="select-name" multiple id="form-clear-c-mSelect-suc">
 				@@include('_tpl_forms_options.html')
 			</select>
-			@@include('_tpl_forms_valid.html')
+			@@include('_tpl_forms_valid-old.html')
 		</div>
 	</div>
 
@@ -117,7 +117,7 @@
 					<select class="cselect" data-placeholder="- Выбрать -" name="select-name" id="form-cover-c-select-base">
 						@@include('_tpl_forms_options.html')
 					</select>
-					@@include('_tpl_forms_valid.html')
+					@@include('_tpl_forms_valid-old.html')
 				</div>
 			</div>
 			<!--===================================================-->
@@ -129,7 +129,7 @@
 					<select class="cselect field-js" data-placeholder="- Выбрать -" name="select-name" id="form-cover-c-select">
 						@@include('_tpl_forms_options.html')
 					</select>
-					@@include('_tpl_forms_valid.html')
+					@@include('_tpl_forms_valid-old.html')
 				</div>
 			</div>
 			<!--===================================================-->
@@ -141,7 +141,7 @@
 					<select class="cselect field-js" name="select-name" id="form-cover-c-select-fit">
 						@@include('_tpl_forms_options.html', {"placeholder":"false"})
 					</select>
-					@@include('_tpl_forms_valid.html')
+					@@include('_tpl_forms_valid-old.html')
 				</div>
 			</div>
 			<!--===================================================-->
@@ -153,7 +153,7 @@
 					<select class="cselect field-js error" data-placeholder="- Выбрать -" name="select-name" id="form-cover-c-select-err">
 						@@include('_tpl_forms_options.html')
 					</select>
-					@@include('_tpl_forms_valid.html')
+					@@include('_tpl_forms_valid-old.html')
 				</div>
 			</div>
 			<!--===================================================-->
@@ -165,7 +165,7 @@
 					<select class="cselect field-js success" data-placeholder="- Выбрать -" name="select-name" id="form-cover-c-select-suc">
 						@@include('_tpl_forms_options.html')
 					</select>
-					@@include('_tpl_forms_valid.html')
+					@@include('_tpl_forms_valid-old.html')
 				</div>
 			</div>
 		</div>
@@ -191,7 +191,7 @@
 					<select class="cselect" data-placeholder="- Выберите несколько вариантов -" name="select-name" multiple id="form-cover-c-mSelect-base">
 						@@include('_tpl_forms_options.html')
 					</select>
-					@@include('_tpl_forms_valid.html')
+					@@include('_tpl_forms_valid-old.html')
 				</div>
 			</div>
 			<!--===================================================-->
@@ -203,7 +203,7 @@
 					<select class="cselect field-js" data-placeholder="- Выбрать -" name="select-name" multiple id="form-cover-c-mSelect">
 						@@include('_tpl_forms_options.html')
 					</select>
-					@@include('_tpl_forms_valid.html')
+					@@include('_tpl_forms_valid-old.html')
 				</div>
 			</div>
 			<!--===================================================-->
@@ -222,7 +222,7 @@
 						<option value="7">Сочетание</option>
 						<option value="8">Расстояние</option>
 					</select>
-					@@include('_tpl_forms_valid.html')
+					@@include('_tpl_forms_valid-old.html')
 				</div>
 			</div>
 			<!--===================================================-->
@@ -234,7 +234,7 @@
 					<select class="cselect field-js error" data-placeholder="- Выбрать -" name="select-name" multiple id="form-cover-c-mSelect-err">
 						@@include('_tpl_forms_options.html')
 					</select>
-					@@include('_tpl_forms_valid.html')
+					@@include('_tpl_forms_valid-old.html')
 				</div>
 			</div>
 			<!--===================================================-->
@@ -246,7 +246,7 @@
 					<select class="cselect field-js success" data-placeholder="- Выбрать -" name="select-name" multiple id="form-cover-c-mSelect-suc">
 						@@include('_tpl_forms_options.html')
 					</select>
-					@@include('_tpl_forms_valid.html')
+					@@include('_tpl_forms_valid-old.html')
 				</div>
 			</div>
 		</div>
