--- a/src/_tpl_layout_header.html
+++ b/src/_tpl_layout_header.html
@@ -1,6 +1,6 @@
 <header class="header">
-  <div class="max-wrap layout">
-    <div class="header__holder">
+  <div class="layout-page layout-page-spaces">
+    <div class="header-container">
       <!--logo-->
       <div class="logo">
         @@if(context.currentItem === "Главная"){<span>Project Name</span>}
