--- a/src/__404.html
+++ b/src/__404.html
@@ -3,8 +3,6 @@
   "pageClass": ""
 })
 
-@@include('_tpl_PAGE_WRAP.html', {"pageWrap": "START" })
-
 <!--HEADER-->
 @@include('_tpl_layout_header.html', {
   "currentItem": "Типографика"
@@ -12,34 +10,24 @@
 <!--HEADER end-->
 
 <!--MAIN-->
-<div class="main">
-  <div class="max-wrap layout">
+<main class="main" role="main">
+  <div class="layout-page layout-page-spaces">
     <div class="main__holder">
       <!--CONTENT-->
       <div class="content-wrap">
-        <div class="content user-content">
+        <div class="content article-content">
           <h1>Page Not Found</h1>
           <p>Sorry, but the page you were trying to view does not exist.</p>
         </div>
       </div>
       <!--CONTENT end-->
-
-      <!--SIDEBAR-->
-      @@include('_tpl_layout_sidebar.html')
-      <!--SIDEBAR-->
-
-      <!--ASIDE-->
-      @@include('_tpl_layout_aside.html')
-      <!--ASIDE end-->
     </div>
   </div>
-</div>
+</main>
 <!--MAIN end-->
 
 <!--FOOTER-->
 @@include('_tpl_layout_footer.html')
 <!--FOOTER end-->
-
-@@include('_tpl_PAGE_WRAP.html', {"pageWrap": "END" })
 
 @@include('_tpl_layout_foot.html')
