--- a/src/__index.html
+++ b/src/__index.html
@@ -1,54 +1,31 @@
-@@include('_tpl_layout_head.html', {
+@@include("_tpl_layout_head.html", {
   "title": "Главная",
   "pageClass": ""
 })
 
-@@include('_tpl_PAGE_WRAP.html', {"pageWrap": "START" })
-
 <!--HEADER-->
-@@include('_tpl_layout_header.html', {
-  "currentItem": "Главная"
-})
+@@include("_tpl_layout_header.html", { "currentItem": "Главная" })
 <!--HEADER end-->
 
 <!--MAIN-->
-<div class="main">
-  <div class="max-wrap layout">
-    <div class="main__holder">
-      <!--CONTENT-->
-      <div class="content-wrap">
-        <div class="content user-content">
-          <!--breadcrumbs-->
-          @@include('_tpl_breadcrumbs.html', { "items": ["Главная"], "last": "Главная" })
-          <!--breadcrumbs end-->
-          <section class="section">
-            <div class="section__title">
-              <h2>Заголовок секции</h2>
-            </div>
-            <div class="section__holder">
-              <p>Контент секции</p>
-            </div>
-          </section>
-        </div>
+<main class="main" role="main">
+  <div class="layout-page layout-page-spaces">
+    <!--CONTENT-->
+    <section class="section">
+      <div class="section__title">
+        <h2>Заголовок секции</h2>
       </div>
-      <!--CONTENT end-->
-
-      <!--SIDEBAR-->
-      @@include('_tpl_layout_sidebar.html')
-      <!--SIDEBAR-->
-
-      <!--ASIDE-->
-      @@include('_tpl_layout_aside.html')
-      <!--ASIDE end-->
-    </div>
+      <div class="section__holder">
+        <p>Контент секции</p>
+      </div>
+    </section>
+    <!--CONTENT end-->
   </div>
-</div>
+</main>
 <!--MAIN end-->
 
 <!--FOOTER-->
-@@include('_tpl_layout_footer.html')
+@@include("_tpl_layout_footer.html")
 <!--FOOTER end-->
 
-@@include('_tpl_PAGE_WRAP.html', {"pageWrap": "END" })
-
-@@include('_tpl_layout_foot.html')
+@@include("_tpl_layout_foot.html")
