--- a/src/_tpl_forms_selects.html
+++ b/src/_tpl_forms_selects.html
@@ -8,7 +8,7 @@
     })
 
     <div>
-      @@loop("_tpl_forms_field.html", [{
+      @@loop("_tpl_forms_field-old.html", [{
           "wrap": "",
           "type": "select",
           "value": "",
@@ -41,7 +41,7 @@
     <div class="columns">
       <div class="column">
         <p><b>Without js</b></p>
-        @@loop("_tpl_forms_field.html", [
+        @@loop("_tpl_forms_field-old.html", [
           {
             "type": "select",
             "id": "s-base",
@@ -86,7 +86,7 @@
       </div>
       <div class="column">
         <p><b>With js</b></p>
-        @@loop("_tpl_forms_field.html", [
+        @@loop("_tpl_forms_field-old.html", [
           {
             "type": "select",
             "id": "s-base-js",
@@ -158,7 +158,7 @@
       <div class="columns">
         <div class="column">
           <p><b>Without js</b></p>
-          @@loop("_tpl_forms_field.html", [
+          @@loop("_tpl_forms_field-old.html", [
             {
               "type": "selectMod",
               "id": "sm-base",
@@ -203,7 +203,7 @@
         </div>
         <div class="column">
           <p><b>With js</b></p>
-          @@loop("_tpl_forms_field.html", [
+          @@loop("_tpl_forms_field-old.html", [
             {
               "type": "selectMod",
               "id": "sm-base-js",
@@ -269,7 +269,7 @@
     <div class="columns">
       <div class="column">
         <p><b>Without js</b></p>
-        @@loop("_tpl_forms_field.html", [
+        @@loop("_tpl_forms_field-old.html", [
           {
             "wrap": "true",
             "type": "select",
@@ -321,7 +321,7 @@
       </div>
       <div class="column">
         <p><b>With js</b></p>
-        @@loop("_tpl_forms_field.html", [
+        @@loop("_tpl_forms_field-old.html", [
           {
             "wrap": "true",
             "type": "select",
@@ -400,7 +400,7 @@
       <div class="columns">
         <div class="column">
           <p><b>Without js</b></p>
-          @@loop("_tpl_forms_field.html", [
+          @@loop("_tpl_forms_field-old.html", [
             {
               "wrap": "true",
               "type": "selectMod",
@@ -452,7 +452,7 @@
         </div>
         <div class="column">
           <p><b>With js</b></p>
-          @@loop("_tpl_forms_field.html", [
+          @@loop("_tpl_forms_field-old.html", [
             {
               "wrap": "true",
               "type": "selectMod",
