--- a/src/_tpl_forms_user-form.html
+++ b/src/_tpl_forms_user-form.html
@@ -1,7 +1,7 @@
 <div class="user-form">
   <div class="form-title max-wrap-text push-auto">@@title</div>
   <form action="#!" method="post" class="max-wrap-text push-auto">
-    @@loop("_tpl_forms_field.html", [
+    @@loop("_tpl_forms_field-old.html", [
       {
         "wrap": "true",
         "type": "text",
@@ -29,7 +29,7 @@
         "required": ""
       }
     ])
-    @@include("_tpl_forms_field.html", {
+    @@include("_tpl_forms_field-old.html", {
       "wrap": "true",
       "type": "file",
       "id": "uf-file",
@@ -44,7 +44,7 @@
         <div class="captcha">
           <img src="img/captcha.jpg" alt="captcha" />
           <input type="text" id="form-captcha" required>
-          @@include('_tpl_forms_valid.html', {"error": "Enter text in this image", "success": "The verification was successful!"})
+          @@include('_tpl_forms_valid-old.html', {"error": "Enter text in this image", "success": "The verification was successful!"})
           <div class="captcha-refresh"><a href="#"><span>Try another text</span></a></div>
         </div>
       </div>
