--- a/src/_tpl_forms_valid.html
+++ b/src/_tpl_forms_valid.html
@@ -1,2 +1,4 @@
-<div class="error-note">@@if(context.error && context.error != "@@error") {@@error}@@if(!context.error || context.error == "@@error") {Error text}</div>
-<div class="success-note">@@if(context.success && context.success != "@@success") {@@success}@@if(!context.success || context.success == "@@success") {Success text}</div>
+@@if(!context.error){<span class="error-feedback">Error feedback</span>}
+@@if(context.error){<span class="error-feedback">@@error</span>}
+@@if(!context.success){<span class="success-feedback">Success feedback</span>}
+@@if(context.success){<span class="success-feedback">@@success</span>}
