--- a/src/_tpl_nav-link--full.html
+++ b/src/_tpl_nav-link--full.html
@@ -1,4 +1,4 @@
 <div class="@@key__tab @@key__tab-js">
   <a href="@@href"><span>@@txt</span></a>
-  <span class="@@key__angle @@key-handler-js"><i>&nbsp;</i></span>
+  <span class="@@key__angle @@key-handler-js"><i>&#9660;</i></span>
 </div>
